# purdue-cs573-assignments

./: README.md
.github/workflows/: assignment2.yml  assignment3.yml  assignment4.yml  assignment5.yml  build.yml
assignment2/: .gitignore  2_1.py  2_2.py  5_1.py  5_2.py  5_3.py  README.md  discretize.py  evaluation.ipynb  preprocess.py  pyproject.toml  split.py
assignment2/naive_bayes_classifier/: __init__.py  definitions.py  preprocess.py  preprocessing.py  runner.py
assignment2/naive_bayes_classifier/preprocess/: __init__.py  preprocess.ipynb
assignment2/tests/: test_naive_bayes.py
assignment3/: .gitignore  README.md  cv.py  evaluation.ipynb  lr_svm.py  myTrainingSet.csv  preprocess-assg3.py  pyproject.toml
assignment3/libs/: __init__.py
assignment3/libs/logistic_regression/: __init__.py
assignment3/libs/naive_bayes_classifier/: __init__.py  definitions.py  preprocessing.py
assignment3/libs/preprocessing/: __init__.py
assignment3/libs/svm/: __init__.py
assignment3/tests/: test_assignment3.py
assignment4/: .gitignore  README.md  bonus.py  cv_frac.py  cv_numtrees.py  evaluation.ipynb  preprocess-assg4.py  pyproject.toml  testSet.csv  trainingSet.csv  trees.py
assignment4/libs/: __init__.py  bagging.py  cv.py  decision_tree.py  definitions.py  mlp.py  preprocessing.py  random_forest.py
assignment5/: .gitignore  README.md  evaluation.ipynb  exploration.py  hierarchical.py  kmeans-analysis.py  kmeans.py  mypy.ini  pyproject.toml
assignment5/libs/: __init__.py  evaluation.py  evaluations.py  utils.py
