[tool.poetry]
name = "naive-bayes-classifier"
version = "0.1.0"
description = "Implementation for CS537 assignment 2 at Purdue."
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.8.3"
mypy = "^0.812"
autopep8 = "^1.5.7"
jupyter = "^1.0.0"
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
