[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = "Implementation for CS573 assignment 3 at Purdue."
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.11.1"
mypy = "^0.910"
autopep8 = "^1.5.7"
jupyter = "^1.0.0"
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
