[tool.poetry]
name = "assignment4"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.3"
pandas = "^1.3.4"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.11.1"
mypy = "^0.910"
autopep8 = "^1.6.0"
jupyter = "^1.0.0"
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
